--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Adam Bunce",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.11"
   },
   "devDependencies": {
