--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.2.11"
+    "mongoose": "^6.2.11",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
