--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.78.0",
+    "aws-sdk": "^2.1124.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
